# Land-Ocean-Ratio_Calculator

./: app.py  pyproject.toml  setup.cfg
