[metadata]
name = land-ocean-ratio-calculator
version = 0.0.1
author = Jordan Anodjo
author_email = jordananodjo@gmail.com
description = Calculates ocean coverage percentage
url = https://github.com/TheSlimyOne/Land-Ocean-Ratio_Calculator

[options]
packages = find:
python_requires = >=3.8
include_package_data = True